[gd_scene load_steps=12 format=2]

[ext_resource path="res://StatChange.gd" type="Script" id=1]
[ext_resource path="res://UI/SelectBackground.png" type="Texture" id=2]
[ext_resource path="res://Assets/Fonts/statsname.tres" type="DynamicFont" id=3]
[ext_resource path="res://Assets/Fonts/PietraFont.tres" type="DynamicFont" id=4]
[ext_resource path="res://UI/SelecArrowRight.png" type="Texture" id=5]
[ext_resource path="res://UI/SelecArrowLeft.png" type="Texture" id=6]
[ext_resource path="res://UI/SelecArrowLeftpress.png" type="Texture" id=7]
[ext_resource path="res://UI/SelecArrowRightpress.png" type="Texture" id=8]
[ext_resource path="res://Assets/UI/ExpBarProgress.png" type="Texture" id=9]
[ext_resource path="res://Assets/UI/ExpBarBorder.png" type="Texture" id=10]
[ext_resource path="res://Assets/UI/ExpBarUnder.png" type="Texture" id=11]

[node name="StatChange" type="Node2D"]
script = ExtResource( 1 )

[node name="StatsMenu" type="Control" parent="."]
margin_left = -17.7469
margin_top = -17.9251
margin_right = 302.253
margin_bottom = 462.075
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="StatsMenu"]
margin_left = -16.9017
margin_top = -16.0
margin_right = 320.0
margin_bottom = 480.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="StatsMenu"]
margin_left = 17.0
margin_top = 17.0
margin_right = 286.0
margin_bottom = 91.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="StatsMenu/VBoxContainer"]
margin_right = 269.0
margin_bottom = 43.0

[node name="MarginLeft" type="MarginContainer" parent="StatsMenu/VBoxContainer/HBoxContainer"]
margin_right = 75.0
margin_bottom = 43.0
rect_min_size = Vector2( 75, 0 )

[node name="Stats" type="Label" parent="StatsMenu/VBoxContainer/HBoxContainer"]
margin_left = 79.0
margin_right = 184.0
margin_bottom = 43.0
custom_fonts/font = ExtResource( 4 )
text = "Stats Up"
align = 1

[node name="MarginMiddle" type="MarginContainer" parent="StatsMenu/VBoxContainer/HBoxContainer"]
margin_left = 188.0
margin_right = 218.0
margin_bottom = 43.0
rect_min_size = Vector2( 30, 0 )

[node name="Points" type="Label" parent="StatsMenu/VBoxContainer/HBoxContainer"]
margin_left = 222.0
margin_right = 239.0
margin_bottom = 43.0
custom_fonts/font = ExtResource( 4 )
text = "0"
align = 2
valign = 3

[node name="ExpContainer" type="HBoxContainer" parent="StatsMenu/VBoxContainer"]
margin_top = 47.0
margin_right = 269.0
margin_bottom = 61.0
alignment = 1

[node name="MinExp" type="Label" parent="StatsMenu/VBoxContainer/ExpContainer"]
margin_left = 38.0
margin_right = 46.0
margin_bottom = 14.0
text = "0"

[node name="ExpBar" type="TextureProgress" parent="StatsMenu/VBoxContainer/ExpContainer"]
margin_left = 50.0
margin_right = 210.0
margin_bottom = 14.0
rect_min_size = Vector2( 160, 5 )
max_value = 20.0
texture_under = ExtResource( 11 )
texture_over = ExtResource( 10 )
texture_progress = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MaxExp" type="Label" parent="StatsMenu/VBoxContainer/ExpContainer"]
margin_left = 214.0
margin_right = 230.0
margin_bottom = 14.0
text = "20"

[node name="DropDown" type="OptionButton" parent="StatsMenu/VBoxContainer"]
margin_top = 65.0
margin_right = 269.0
margin_bottom = 85.0

[node name="SeparationTop" type="MarginContainer" parent="StatsMenu/VBoxContainer"]
margin_top = 89.0
margin_right = 269.0
margin_bottom = 99.0
rect_min_size = Vector2( 0, 10 )

[node name="Strength" type="Label" parent="StatsMenu/VBoxContainer"]
margin_top = 103.0
margin_right = 269.0
margin_bottom = 125.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Strength"
align = 1

[node name="StrengthMeter" type="HBoxContainer" parent="StatsMenu/VBoxContainer"]
margin_top = 129.0
margin_right = 269.0
margin_bottom = 161.0

[node name="MarginLeft" type="MarginContainer" parent="StatsMenu/VBoxContainer/StrengthMeter"]
margin_right = 90.0
margin_bottom = 32.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 90, 0 )

[node name="StrLeftButton" type="TextureButton" parent="StatsMenu/VBoxContainer/StrengthMeter"]
margin_left = 94.0
margin_right = 126.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
expand = true

[node name="StrengthModifier" type="Label" parent="StatsMenu/VBoxContainer/StrengthMeter"]
margin_left = 130.0
margin_top = 9.0
margin_right = 138.0
margin_bottom = 23.0
text = "0"
align = 1

[node name="StrRightButton" type="TextureButton" parent="StatsMenu/VBoxContainer/StrengthMeter"]
margin_left = 142.0
margin_right = 174.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 8 )
expand = true

[node name="MarginRight" type="MarginContainer" parent="StatsMenu/VBoxContainer/StrengthMeter"]
margin_left = 178.0
margin_right = 213.0
margin_bottom = 32.0
rect_min_size = Vector2( 35, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Agility" type="Label" parent="StatsMenu/VBoxContainer"]
margin_top = 165.0
margin_right = 269.0
margin_bottom = 187.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Agility"
align = 1

[node name="AgilityMeter" type="HBoxContainer" parent="StatsMenu/VBoxContainer"]
margin_top = 191.0
margin_right = 269.0
margin_bottom = 223.0

[node name="MarginLeft" type="MarginContainer" parent="StatsMenu/VBoxContainer/AgilityMeter"]
margin_right = 90.0
margin_bottom = 32.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 90, 0 )

[node name="AgiLeftButton" type="TextureButton" parent="StatsMenu/VBoxContainer/AgilityMeter"]
margin_left = 94.0
margin_right = 126.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
expand = true

[node name="AgilityModifier" type="Label" parent="StatsMenu/VBoxContainer/AgilityMeter"]
margin_left = 130.0
margin_top = 9.0
margin_right = 138.0
margin_bottom = 23.0
text = "0"
align = 1

[node name="AgiRightButton" type="TextureButton" parent="StatsMenu/VBoxContainer/AgilityMeter"]
margin_left = 142.0
margin_right = 174.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 8 )
expand = true

[node name="MarginRight" type="MarginContainer" parent="StatsMenu/VBoxContainer/AgilityMeter"]
margin_left = 178.0
margin_right = 213.0
margin_bottom = 32.0
rect_min_size = Vector2( 35, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Proportion" type="Label" parent="StatsMenu/VBoxContainer"]
margin_top = 227.0
margin_right = 269.0
margin_bottom = 270.0
custom_fonts/font = ExtResource( 4 )
text = "Proportion"
align = 1

[node name="Workers" type="Label" parent="StatsMenu/VBoxContainer"]
margin_top = 274.0
margin_right = 269.0
margin_bottom = 296.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Workers"
align = 1

[node name="WorkersMeter" type="HBoxContainer" parent="StatsMenu/VBoxContainer"]
margin_top = 300.0
margin_right = 269.0
margin_bottom = 332.0

[node name="MarginLeft" type="MarginContainer" parent="StatsMenu/VBoxContainer/WorkersMeter"]
margin_right = 90.0
margin_bottom = 32.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 90, 0 )

[node name="WorkersLeftButton" type="TextureButton" parent="StatsMenu/VBoxContainer/WorkersMeter"]
margin_left = 94.0
margin_right = 126.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
expand = true

[node name="WorkersModifier" type="Label" parent="StatsMenu/VBoxContainer/WorkersMeter"]
margin_left = 130.0
margin_top = 9.0
margin_right = 138.0
margin_bottom = 23.0
text = "2"
align = 1

[node name="WorkersRightButton" type="TextureButton" parent="StatsMenu/VBoxContainer/WorkersMeter"]
margin_left = 142.0
margin_right = 174.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 8 )
expand = true

[node name="MarginRight" type="MarginContainer" parent="StatsMenu/VBoxContainer/WorkersMeter"]
margin_left = 178.0
margin_right = 213.0
margin_bottom = 32.0
rect_min_size = Vector2( 35, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Warriors" type="Label" parent="StatsMenu/VBoxContainer"]
margin_top = 336.0
margin_right = 269.0
margin_bottom = 358.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Warriors"
align = 1

[node name="WarriorsMeter" type="HBoxContainer" parent="StatsMenu/VBoxContainer"]
margin_top = 362.0
margin_right = 269.0
margin_bottom = 394.0

[node name="MarginLeft" type="MarginContainer" parent="StatsMenu/VBoxContainer/WarriorsMeter"]
margin_right = 90.0
margin_bottom = 32.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 90, 0 )

[node name="WarriorsLeftButton" type="TextureButton" parent="StatsMenu/VBoxContainer/WarriorsMeter"]
margin_left = 94.0
margin_right = 126.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
expand = true

[node name="WarriorsModifier" type="Label" parent="StatsMenu/VBoxContainer/WarriorsMeter"]
margin_left = 130.0
margin_top = 9.0
margin_right = 138.0
margin_bottom = 23.0
text = "1"
align = 1

[node name="WarriorsRightButton" type="TextureButton" parent="StatsMenu/VBoxContainer/WarriorsMeter"]
margin_left = 142.0
margin_right = 174.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 8 )
expand = true

[node name="MarginRight" type="MarginContainer" parent="StatsMenu/VBoxContainer/WarriorsMeter"]
margin_left = 178.0
margin_right = 213.0
margin_bottom = 32.0
rect_min_size = Vector2( 35, 0 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="item_selected" from="StatsMenu/VBoxContainer/DropDown" to="." method="_on_DropDown_item_selected"]
[connection signal="pressed" from="StatsMenu/VBoxContainer/StrengthMeter/StrLeftButton" to="." method="_on_StrLeftButton_pressed"]
[connection signal="pressed" from="StatsMenu/VBoxContainer/StrengthMeter/StrRightButton" to="." method="_on_StrRightButton_pressed"]
[connection signal="pressed" from="StatsMenu/VBoxContainer/AgilityMeter/AgiLeftButton" to="." method="_on_AgiLeftButton_pressed"]
[connection signal="pressed" from="StatsMenu/VBoxContainer/AgilityMeter/AgiRightButton" to="." method="_on_AgiRightButton_pressed"]
[connection signal="pressed" from="StatsMenu/VBoxContainer/WorkersMeter/WorkersLeftButton" to="." method="_on_WorkersLeftButton_pressed"]
[connection signal="pressed" from="StatsMenu/VBoxContainer/WorkersMeter/WorkersRightButton" to="." method="_on_WorkersRightButton_pressed"]
[connection signal="pressed" from="StatsMenu/VBoxContainer/WarriorsMeter/WarriorsLeftButton" to="." method="_on_WarriorsLeftButton_pressed"]
[connection signal="pressed" from="StatsMenu/VBoxContainer/WarriorsMeter/WarriorsRightButton" to="." method="_on_WarriorsRightButton_pressed"]
